# backend/src/components/checkouts/checkoutsRoutes.js
@@ -21,22 +21,23 @@ const checkoutController = require('../checkouts/checkoutController');
  *           type: string
  *         originalQuantity:
  *           type: number
- *         takenQuantity:
- *           type: number
- *           default: 0
  *         name:
  *           type: string
- *         isActive:
- *           type: boolean
- *           default: true
  */
 
 /**
  * @swagger
- * /addProduct:
+ * /addProduct/{userId}:
  *   post:
  *     summary: Add a new product
  *     tags: [Products]
+ *     parameters:
+ *       - in: path
+ *         name: userId
+ *         required: true
+ *         schema:
+ *           type: string
+ *         description: User ID
  *     requestBody:
  *       required: true
  *       content:
@@ -46,33 +47,102 @@ const checkoutController = require('../checkouts/checkoutController');
  *     responses:
  *       201:
  *         description: Product added successfully
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 message:
+ *                   type: string
+ *                   example: "Product added successfully"
+ *                 product:
+ *                   $ref: '#/components/schemas/Product'
  *       400:
  *         description: Invalid input
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 message:
+ *                   type: string
+ *                   example: "ProductId, price, picture, original quantity, description, sellerId and name are required."
  *       500:
  *         description: Internal server error
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 message:
+ *                   type: string
+ *                   example: "Server error."
  */
-router.post('/addProduct', checkoutController.addProduct);
+router.post('/addProduct/:userId', checkoutController.addProduct);
 
 /**
  * @swagger
- * /getAvailableProducts:
+ * /getAvailableProducts/{userId}:
  *   get:
  *     summary: Get all available products
  *     tags: [Products]
+ *     parameters:
+ *       - in: path
+ *         name: userId
+ *         required: true
+ *         schema:
+ *           type: string
+ *         description: User ID
  *     responses:
  *       200:
  *         description: List of available products
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: array
+ *               items:
+ *                 type: object
+ *                 properties:
+ *                   picture:
+ *                     type: string
+ *                   price:
+ *                     type: number
+ *                   description:
+ *                     type: string
+ *                   ratings:
+ *                     type: integer
+ *                   reviews:
+ *                     type: array
+ *                     items:
+ *                       type: string
+ *                   sellerType:
+ *                     type: string
  *       500:
  *         description: Internal server error
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 message:
+ *                   type: string
  */
-router.get('/getAvailableProducts', checkoutController.getAvailableProducts);
+
+router.get('/getAvailableProducts/:userId', checkoutController.getAvailableProducts);
 
 /**
  * @swagger
- * /filterProducts:
+ * /filterProducts/{userId}:
  *   get:
  *     summary: Get products by price range
  *     tags: [Products]
+ *     parameters:
+ *       - in: path
+ *         name: userId
+ *         required: true
+ *         schema:
+ *           type: string
+ *         description: User ID
  *     parameters:
  *       - in: query
  *         name: minPrice
@@ -87,18 +157,38 @@ router.get('/getAvailableProducts', checkoutController.getAvailableProducts);
  *     responses:
  *       200:
  *         description: Products within the price range
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: array
+ *               items:
+ *                 $ref: '#/components/schemas/Product'
  *       500:
  *         description: Internal server error
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 message:
+ *                   type: string
+ *                   example: "Server error."
  */
-router.get('/filterProducts', checkoutController.getProductsByPriceRange);
+router.get('/filterProducts/:userId', checkoutController.getProductsByPriceRange);
 
 /**
  * @swagger
- * /editProducts/{productId}:
+ * /editProducts/{userId}/{productId}:
  *   put:
  *     summary: Update product details
  *     tags: [Products]
  *     parameters:
+ *       - in: path
+ *         name: userId
+ *         required: true
+ *         schema:
+ *           type: string
+ *         description: User ID
  *       - in: path
  *         name: productId
  *         required: true
@@ -114,33 +204,88 @@ router.get('/filterProducts', checkoutController.getProductsByPriceRange);
  *     responses:
  *       200:
  *         description: Product updated successfully
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 message:
+ *                   type: string
+ *                   example: "Product updated successfully"
+ *                 product:
+ *                   $ref: '#/components/schemas/Product'
  *       404:
  *         description: Product not found
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 message:
+ *                   type: string
+ *                   example: "Product not found"
  *       500:
  *         description: Internal server error
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 message:
+ *                   type: string
+ *                   example: "Server error."
  */
-router.put('/editProducts/:productId', checkoutController.updateProduct);
+router.put('/editProducts/:userId/:productId', checkoutController.updateProduct);
+
 
 /**
  * @swagger
- * /sortProducts:
+ * /sortProducts/{userId]}:
  *   get:
  *     summary: Get products sorted by ratings
  *     tags: [Products]
+ *     parameters:
+ *       - in: path
+ *         name: userId
+ *         required: true
+ *         schema:
+ *           type: string
+ *         description: User ID
  *     responses:
  *       200:
  *         description: Sorted list of products
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: array
+ *               items:
+ *                 $ref: '#/components/schemas/Product'
  *       500:
  *         description: Internal server error
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 message:
+ *                   type: string
+ *                   example: "Server error."
  */
-router.get('/sortProducts', checkoutController.getAvailableProductsSortedByRatings);
+router.get('/sortProducts/:userId', checkoutController.getAvailableProductsSortedByRatings);
 
 /**
  * @swagger
- * /searchProductByName:
+ * /searchProductByName/{userId}:
  *   get:
  *     summary: Search for a product by name
- *     tags: [Product]
+ *     tags: [Products]
+ *     parameters:
+ *       - in: path
+ *         name: userId
+ *         required: true
+ *         schema:
+ *           type: string
+ *         description: User ID
  *     parameters:
  *       - in: query
  *         name: productName
@@ -162,17 +307,22 @@ router.get('/sortProducts', checkoutController.getAvailableProductsSortedByRatin
  *         content:
  *           application/json:
  *             schema:
- *               $ref: '#/components/schemas/Error'
+ *               type: object
+ *               properties:
+ *                 message:
+ *                   type: string
+ *                   example: "No products found"
  *       500:
  *         description: Internal server error
  *         content:
  *           application/json:
  *             schema:
- *               $ref: '#/components/schemas/Error'
+ *               type: object
+ *               properties:
+ *                 message:
+ *                   type: string
+ *                   example: "Server error."
  */
-
-router.get('/searchProductByName', checkoutController.searchProductByName);
-
-
+router.get('/searchProductByName/:userId', checkoutController.searchProductByName);
 
 module.exports = router;
